# us-equities-portfolio-demos

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
alpha_library/: alphas.py
combining_alphas/: alpha_combination_estimators.py  model_evaluation.py  utils.py
markowitz/: main.py
markowitz/backtesting/: data_processing.py
markowitz/portfolio_optimisation/: optimisation_classes.py
src/alphalab/: constants.py  orchestrator.py  setup.py
src/alphalab/alpha_library/: alphas.py
src/alphalab/combining_alphas/: alpha_combination_estimators.py  feature_creation.py  utils.py
src/alphalab/markowitz/: main.py
src/alphalab/markowitz/backtesting/: data_processing.py  performance_analysis_funcs.py
src/alphalab/markowitz/portfolio_optimisation/: data_preprocessing.py  optimisation_classes.py
src/alphalab/utils/: alphalens_func_wrappers.py  plotting.py  tidy_functions.py  zipline_func_wrappers.py
utils/: data_visualisation_utils.py  tidy_functions.py  zipline_func_wrappers.py
