[tool.poetry]
name = "us-equities-portfolio"
version = "0.1.0"
description = "This project demonstrates end-to-end portfolio construction."
authors = ["sinasalek <salek.sina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyfolio-reloaded = "^0.9.7"
zipline-reloaded = "^3.0.4"
cvxpy = "^1.5.3"
pandas = "^2.2.2"
numpy = "^2.1.1"
scikit-learn = "^1.5.1"
yfinance = "^0.2.43"
mlflow = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
